@@ -23,6 +23,7 @@ export(balance)
 export(balance.info)
 export(collapse)
 export(expand)
+export(get_local_dim)
 export(is.shaq)
 export(is.tshaq)
 export(km)
